# RA

./: .gitmodules
lab1/: README.md  main.cpp  utils.cpp  utils.h
lab1/debug/resources/: curve_points.txt
lab2/: CMakeLists.txt  README.md  main.cpp  particle.cpp  particle.h  particle_system.cpp  particle_system.h  utils.cpp  utils.h
lab3/: .gitignore  CMakeLists.txt  README.md
lab3/src/physics/: collision_grid.cpp
